--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,32 @@
 [project]
 name = "outline-mcp"
 version = "0.1.0"
-description = "Add your description here"
+description = "An MCP server for searching and retrieving documents from Outline knowledge bases. Integrates with Claude Desktop and other MCP clients to provide Outline document search capabilities with support for both interactive credentials and environment variables."
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "httpx>=0.28.1",
     "mcp[cli]>=1.6.0",
 ]
+authors = [
+    {name = "Your Name", email = "your.email@example.com"}
+]
+license = {text = "MIT"}
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
+]
+keywords = ["mcp", "claude", "outline", "knowledge-base", "search"]
+
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
+[project.scripts]
+outline-mcp = "outline_mcp.__main__:main"
+
+[project.urls]
+"Homepage" = "https://github.com/yourusername/outline-mcp"
+"Bug Tracker" = "https://github.com/yourusername/outline-mcp/issues"
