--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,13 +3,13 @@ name = "outline-mcp"
 version = "0.1.0"
 description = "An MCP server for searching and retrieving documents from Outline knowledge bases. Integrates with Claude Desktop and other MCP clients to provide Outline document search capabilities with support for both interactive credentials and environment variables."
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.9"
 dependencies = [
     "httpx>=0.28.1",
     "mcp[cli]>=1.6.0",
 ]
 authors = [
-    {name = "Your Name", email = "your.email@example.com"}
+    {name = "Chris Lacaille", email = "chrislacaille5@gmail.com"}
 ]
 license = {text = "MIT"}
 classifiers = [
@@ -21,12 +21,12 @@ classifiers = [
 keywords = ["mcp", "claude", "outline", "knowledge-base", "search"]
 
 [build-system]
-requires = ["setuptools>=61.0"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [project.scripts]
-outline-mcp = "outline_mcp.__main__:main"
+outline-mcp = "outline_mcp.outline:main"
 
 [project.urls]
-"Homepage" = "https://github.com/yourusername/outline-mcp"
-"Bug Tracker" = "https://github.com/yourusername/outline-mcp/issues"
+"Homepage" = "https://github.com/ChrisL108/outline-mcp"
+"Bug Tracker" = "https://github.com/ChrisL108/outline-mcp/issues"
